<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.ContaInfoActivity"
    android:id="@+id/coordinator_conta_info"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_ed_descricao_conta_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/texto_descr"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_ed_saldo_conta_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/texto_saldo"
                android:inputType="numberDecimal"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.button.MaterialButton
            android:id="@+id/button_salvar_conta_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_sal"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="@color/colorPrimary"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>