<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.RelatoriosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:elevation="5dp"
            android:minHeight="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/rd_group_tiposCategorias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_conta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/texto_conta" />

                            <RadioButton
                                android:id="@+id/rb_categoria"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/texto_cat" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:visibility="invisible"/>

                </LinearLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btnBuscar_relatorios"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/texto_buscar"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    android:textSize="18sp"
                    app:backgroundTint="@color/colorAccent" />
            </LinearLayout>

        </android.support.design.card.MaterialCardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:minHeight="150dp">

            <com.anychart.AnyChartView
                android:id="@+id/piechart_relatorios"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="130dp"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>